# hw_19_mobile_automation

./: .gitignore  pyproject.toml
mobile_tests_lesson_19/assist/: attach.py
tests/: conftest.py
tests/android/: test_wikipedia.py
